Changelog
=========

1.1.0 (Unreleased)
------------------

* removed any deprecated reference to ``jq`` [keul]
* do not pollute global namespace anymore [keul]
* when ``auto_add`` option is used, automatically clear
  the new date field [keul]
* code cleanup

1.0.3 (2012-05-02)
------------------

* Egg changes as we moved to github [keul]
* Enabled adding a date also with "enter" key [cekk]

1.0.2 (2012-02-23)
------------------

* Fix problem with widget activation on IE [lucabel] 

1.0.1 (2011-10-04)
------------------

* fix the problem with duplicate widgets in one schema [amleczko]

1.0.0 (2011-02-07)
------------------

* No more fix the the collective.js.jqueryui version; leave this to buildouts [keul]
* removed "strip" non-standard method, replaced with a custom ".trim" method [keul]
* added the "*auto_add*" option, for automatically add dates to the field when
  they are selected [keul]

1.0.0-rc3 (2010-11-19)
----------------------

* In view dates are rendered in an unordered list
* Added documentation

1.0.0-rc2 (2010-09-15)
----------------------

* Fixed Javascript docstrings [keul]
* Removed unused locales directory [keul]
* Removed unused widget parameter "dateformat" [keul]
* Some relative URL are now absolute, not breaking browser cache [keul]

1.0.0-rc1 (Unreleased)
----------------------

* Initial release